== 0.6.4 / 
  * Bug Fixes
    * Refactor Hub to clarify mutexing
    * Eliminated potential iteration problem in Timer

== 0.6.3 / 2007-12-18
  * Minor Enhancements
    * Output ProcessExits registration/deregistration info

== 0.6.2 / 2007-12-17
  * Minor Enhancements
    * Output registered PID for ProcessExits
  * Bug Fixes
    * Fix `god remove <group>` not working for unmonitored watches

== 0.6.1 / 2007-12-14

* Minor Enhancement
  * Log when state change is complete

== 0.6.0 / 2007-12-4

* Minor Enhancement
  * Move Syslog calls into God::Logger and clean up all calling code
  * Remove god's pid file on user requested termination
  * Better handling and cleanup of DRb server's unix domain socket
  * Allow shorthand for requesting a god log
  * Add `god check` to make it easier to diagnose event problems
  * Refactor god binary into class/method structure
  * Implement `god remove` to remove a Task altogether
* New Conditions
  * DiskUsage < PollCondition - trigger if disk usage is above limit on mount [Rudy Desjardins]

== 0.5.2 / 2007-10-10

* Minor Enhancement
  * Allow extra args to pass through to config file
  
== 0.5.1 / 2007-10-08

* Bug Fixes
  * Rescue connection refused in http response code condition

== 0.5.0 / 2007-10-05

* Major Enhancements
  * Implement lifecycle scoped metric to allow for cross-state conditions
  * Add TriggerCondition for conditions that need info about state changes
  * Implement notification system
  * Add Tasks (a generalization of Watches) to do non-process related tasks
  * Add example init.d file in GOD_INSTALL_DIR/init/god [scott becker]
  * Add human readable info to conditions (and make low level log lines debug)
  * Switch DRb to use a unix domain socket for security reasons
* Minor Enchancements
  * Allow EventConditions to do transition overloading
  * Report errors during god startup instead of failing silently
  * Make transition block optional (default to Always condition returning true)